<resources>
    <string name="nombreAplicacion">Rick y Morty</string>
    <string name="datosUsuario">Datos de usuario</string>
    <string name="idioma">Idioma</string>
    <string-array name="opcionesIdioma">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>
    <string-array name="valoresIdiomas">
        <item>es</item>
        <item>en</item>
    </string-array>
    <string name="tema">Tema</string>
    <string-array name="opcionesTema">
        <item>Claro</item>
        <item>Oscuro</item>
    </string-array>
    <string-array name="valoresTema">
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="firebase">Cerrar sesión en Firebase</string>
    <string name="tituloEpisodios">Episodios</string>
    <string name="tituloEstadisticas">Estadísticas</string>
    <string name="tituloAjustes">Ajustes</string>
    <string name="tituloAcerca">Acerca de</string>
    <string-array name="opcionesFirebase">
        <item>Si</item>
        <item>No</item>
    </string-array>
    <string-array name="valoresFirebase">
        <item>y</item>
        <item>n</item>
    </string-array>
    <string name="textoRegistro">No tengo cuenta - Registrarse</string>
    <string name="textoSesion">Iniciar Sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="estadisticas">Mis Estadísticas</string>
    <string name="contador">Cargando datos...</string>
    <string name="porcentaje">0%</string>
    <string name="grafica">Gráfica de progreso:</string>
    <string name="comparativa">Vistos vs Totales</string>
    <string name="registro">Registrarse</string>
    <string name="nuevaCuenta">Crear Cuenta Nueva</string>
    <string name="visto">Marcar como visto</string>
    <string name="fecha">Fecha</string>
    <string name="codigo">Código</string>
    <string name="episodio">Nombre del Episodio</string>
    <string name="nombre">Nombre</string>
    <string name="filtrar">Filtrar</string>
    <string name="titulo">RICK AND MORTY</string>
    <string name="fragmentEpisodios">Listado de episodios</string>
    <string name="fragmentDetalles">Detalles del episodio</string>
</resources>